--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -16,7 +16,7 @@
         </li>
       <% end %>
     </ul>
-  <%= submit_tag('Toggle enabled services') %>
+  <%= submit_tag('save') %>
   </div>
   <% end %>
 <% end %>
