--- a/app/views/services/_enable_disqus_comments.html.erb
+++ b/app/views/services/_enable_disqus_comments.html.erb
@@ -8,7 +8,7 @@
 				query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
 			}
 		}
-		document.write('<script type="text/javascript" src="http://disqus.com/forums/<%= @stream.disqus_forum_identifier %>/get_num_replies.js' + query + '"></' + 'script>');
+		document.write('<script type="text/javascript" src="http://disqus.com/forums/<%= disqus_forum_identifier %>/get_num_replies.js' + query + '"></' + 'script>');
 	})();
 //]]>
 </script>
