--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <html>
   <head profile="http://gmpg.org/xfn/11 http://www.w3.org/2006/03/hcard http://microformats.org/wiki/hcalendar-profile">
-    <title><%= @stream.title %> - <%= @stream.subtitle %></title>
+    <title><%= @stream.to_s %><% unless @stream.subtitle.blank? %> - <%= @stream.subtitle %><% end %></title>
     <% if @stream.feedburner_feed_url.blank? %>
       <%= auto_discovery_link_tag(:rss, articles_feed_url(:format => 'rss'), :title => 'Articles RSS') %>
       <%= auto_discovery_link_tag(:atom, articles_feed_url(:format => 'atom'), :title => 'Articles Atom') %>
@@ -10,24 +10,37 @@
     <%= auto_discovery_link_tag(:rss, stream_feed_url(:format => 'rss'), :title => 'Lifestream RSS') %>
     <%= auto_discovery_link_tag(:atom, stream_feed_url(:format => 'atom'), :title => 'Lifestream Atom') %>
     <%= stylesheet_link_tag('html') %>
-    <%= stylesheet_link_tag('application') %>
+    <% if @stream.has_custom_css? %>
+      <%= stylesheet_link_tag(@stream.subdomain) %>
+    <% else %>
+      <%= stylesheet_link_tag('default') %>
+    <% end %>
     <%= stylesheet_link_tag('coderay') %>
     <%= javascript_include_tag(:defaults) %>
     <meta name="generator" content="<%= APPLICATION_NAME %>" />
-    <meta name="description" content="<%= @stream.subtitle %>" />
+    <% unless @stream.subtitle.blank? %>
+      <meta name="description" content="<%= @stream.subtitle %>" />
+    <% end %>
+    <%#TODO USE TAGS %>
     <meta name="keywords" content="<%= @stream.subtitle %>" />
     <meta name="robots" content="index, follow" />
     <meta name="GOOGLEBOT" content="index, follow" />
     <meta name="MSSmartTagsPreventParsing" content="yes" />
     <meta http-equiv="expires" content="3600" />
     <%= yield(:head) %>
+    <%= @stream.header %>
   </head>
   
   <body>
     <div class="header">
-      <%= link_to('Dominiek.com', '/', :rel => 'directory') %>
-      <div class="hide vcard">
-        <a class="fn org url" href="<%= request.request_uri %>"><%= @stream.author %></a>
+      <div class="inner">
+        <%= link_to(@stream.to_s, '/', :rel => 'directory') %>
+        <% unless @stream.subtitle.blank? %>
+          <span class="subtitle"><%= @stream.subtitle %></span>
+        <% end %>
+        <div class="hide vcard">
+          <a class="fn org url" href="<%= request.request_uri %>"><%= @stream.author %></a>
+        </div>
       </div>
     </div>
     <%= yield %>
@@ -36,6 +49,9 @@
     <div class="about">
       <div class="inner">
         <%= @stream.footer %>
+        <div class="generator attribution">
+          <%= link_to(@stream.friendly_url, @stream.blog_url) %> is powered by <a href="http://kakuteru.com/">Kakuteru</a>, <a href="http://friendfeed.com/">Friendfeed</a> and <a href="http://zementa.com/">Zemanta</a>.
+        </div>
       </div>
     </div>
     <%= yield(:foot) %>
