--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,11 +10,14 @@
   <body>
     <div class="navigation">
       <span><%= link_to(APPLICATION_NAME, '/') %></span>
-      <ul>
-        <li><%= link_to('settings', :controller => :dashboard) %></li>
-        <li><%= link_to('activity', manage_stream_url) %></li>
-        <li><%= link_to('articles', manage_articles_url) %></li>
-      </ul>
+      <% if @authenticated %>
+        <ul>
+          <li><%= link_to('settings', :controller => :dashboard) %></li>
+          <li><%= link_to('design', :controller => :design) %></li>
+          <li><%= link_to('activity', manage_stream_url) %></li>
+          <li><%= link_to('articles', manage_articles_url) %></li>
+        </ul>
+      <% end %>
     </div>
     <div class="page clear">
       <%= yield %>
