--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,12 +6,12 @@
       <p><label for="summary">Summary (optional):</label></p>
       <p><%= text_area(:post, :summary, :class => 'summary') %></p>
     <% end %>
-    <p><label for="tags">Tags:</label> <small>Leave empty for auto-tagging</small> <%= text_field(:post, :tag_list) %></p>
+    <p><label for="tags">Tags:</label> <small>Comma separated or leave empty for auto-tagging</small> <%= text_field(:post, :tag_list) %></p>
     <% unless @post.new_record? %>
       <p><%= check_box(:post, :is_draft) %> Draft?</p>
     <% end %>
     <p><%= check_box(:post, :is_votable) %> Enable Tweet, Digg and Addthis?</p>
-    <p><%= select(:post, :markup, Post::SUPPORTED_MARKUP_FORMATS) %></p>
+    <p>in <%= select(:post, :markup, Post::SUPPORTED_MARKUP_FORMATS) %></p>
     <%= submit_tag(@post.new_record? ? 'save as draft' : 'save') %>
     <%= link_to('cancel', manage_articles_url, :rel => 'directory', :class => 'cancel') %>
   <% end %>
