--- a/app/views/streams/_service.html.erb
+++ b/app/views/streams/_service.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to("#{image_tag(service.icon_url)} #{service.name}", service.profile_url, :rel => 'me') %></li>
+<li><%= link_to("#{image_tag(service.icon_url)} #{service.actor}", service.profile_url, :rel => 'me') %></li>
